# Forge

./: build.bat  dist.py  pyproject.toml  readme.md  readme.pl.md  requirements.txt  toml.py
opencplc/: __init__.py  __main__.py  args.py  config.py  host.py  platforms.py  project.py  templates.py
opencplc/files/: extensions.json  launch.json  main-none.c  main.c  main.h  makefile.mk  opencplc.json  properties.json  settings.json
opencplc/files/flash/: stm32g0.ld  stm32wb.ld
opencplc/files/host/: launch.json  main.c  main.h  makefile.mk
opencplc/utils/: __init__.py  common.py  files.py  hash.py  install.py  network.py  text.py  version.py
