[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencplc"
version = "0.1.1"
description = "Project configuration and build tool for OpenCPLC"
readme = "readme.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{name = "Xaeian"}]
keywords = ["embedded", "stm32", "opencplc", "build", "forge"]
dependencies = ["xaeian"]

[project.scripts]
opencplc = "opencplc.__main__:main"

[project.urls]
Repository = "https://github.com/OpenCPLC/Forge"

[tool.setuptools.packages.find]
include = ["opencplc*"]

[tool.setuptools.package-data]
opencplc = ["files/*"]
